crates/servicepoint_binding_uniffi/libraries/go/servicepoint_binding_uniffi/servicepoint_binding_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	int32_t capacity;
	int32_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
RustBuffer ffi_servicepoint_binding_uniffi_rustbuffer_reserve(
	RustBuffer buf,
	int32_t additional,
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_copy_raw(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_len(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_copy_raw(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_height(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_width(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_copy_raw(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_height(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_width(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_as_string(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get_col(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get_row(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_height(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set_col(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set_row(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_to_cp437(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_width(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_command_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_connection_send(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_copy_raw(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_equals(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_fill(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_get(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_height(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_set(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_to_utf8(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_width(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new_max_sized(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_and(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_or(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_win(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_xor(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_brightness(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_char_brightness(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clear(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_cp437_data(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_fade_out(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_command_hard_reset(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new_fake(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_clone(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_load(
	RustCallStatus* out_status
);
uint16_t uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_new(
	RustCallStatus* out_status
);
uint32_t ffi_servicepoint_binding_uniffi_uniffi_contract_version(
	RustCallStatus* out_status
);