crates/servicepoint_binding_uniffi/libraries/ruby/lib/servicepoint_binding_uniffi.rb

    [RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :ffi_servicepoint_binding_uniffi_rustbuffer_reserve,
    [RustBuffer.by_value, :int32, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_func_get_constants,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_copy_raw,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_equals,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_fill,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_get,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_len,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitvec_set,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_copy_raw,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_equals,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_fill,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_get,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_height,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_set,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_bitmap_width,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_copy_raw,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_equals,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_fill,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_get,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_height,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_set,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_brightnessgrid_width,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_as_string,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_equals,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_fill,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get_col,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_get_row,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_height,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set_col,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_set_row,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_to_cp437,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_chargrid_width,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_command_equals,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_connection_send,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_copy_raw,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_equals,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_fill,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_get,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_height,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_set,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_to_utf8,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_method_cp437grid_width,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_clone,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_load,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_bitvec_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_clone,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_load,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_bitmap_new_max_sized,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_clone,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_load,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_brightnessgrid_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_clone,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_load,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_chargrid_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_and,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_or,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_win,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_bitmap_linear_xor,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_brightness,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_char_brightness,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clear,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_clone,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_cp437_data,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_fade_out,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_hard_reset,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_command_utf8_data,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_connection_new_fake,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_clone,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_load,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_servicepoint_binding_uniffi_checksum_constructor_cp437grid_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :ffi_servicepoint_binding_uniffi_uniffi_contract_version,
    [RustCallStatus.by_ref],
    :uint32
  
end

  # Public interface members begin here.

  
  
  
  

class CompressionCode
  UNCOMPRESSED = 1
  ZLIB = 2
  BZIP2 = 3
  LZMA = 4
  ZSTD = 5
  
end


  
  
  # Record type Constants
class Constants
  attr_reader :tile_size, :tile_width, :tile_height, :pixel_width, :pixel_height, :pixel_count

  def initialize(tile_size, tile_width, tile_height, pixel_width, pixel_height, pixel_count)
    @tile_size = tile_size
    @tile_width = tile_width
    @tile_height = tile_height
    @pixel_width = pixel_width
    @pixel_height = pixel_height
    @pixel_count = pixel_count
  end

  def ==(other)
    if @tile_size != other.tile_size
      return false
    end
    if @tile_width != other.tile_width
      return false
    end
    if @tile_height != other.tile_height
      return false
    end
    if @pixel_width != other.pixel_width
      return false
    end
    if @pixel_height != other.pixel_height
      return false
    end
    if @pixel_count != other.pixel_count
      return false
    end

    true
  end
end
  

  
  

def self.get_constants()
  result = ServicepointBindingUniffi.rust_call(:uniffi_servicepoint_binding_uniffi_fn_func_get_constants,)
  return result.consumeIntoTypeConstants
end


  

  
  class BitVec

  # A private helper for initializing instances of the class from a raw pointer,
  # bypassing any initialization logic and ensuring they are GC'd properly.
  def self._uniffi_allocate(pointer)
    pointer.autorelease = false
    inst = allocate
    inst.instance_variable_set :@pointer, pointer
    ObjectSpace.define_finalizer(inst, _uniffi_define_finalizer_by_pointer(pointer, inst.object_id))
    return inst
  end
